@@ -1,20 +1,23 @@
 package vazkii.cmpdl;
 
 import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
 
 import java.awt.*;
-import java.io.BufferedWriter;
-import java.io.FileNotFoundException;
-import java.io.IOException;
-import java.io.UncheckedIOException;
-import java.net.*;
+import java.io.*;
+import java.net.URISyntaxException;
+import java.net.URL;
+import java.net.URLConnection;
+import java.net.URLDecoder;
 import java.nio.channels.Channels;
 import java.nio.channels.FileChannel;
 import java.nio.channels.ReadableByteChannel;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.FileSystem;
 import java.nio.file.*;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
@@ -23,21 +26,30 @@ import java.util.regex.Pattern;
 
 public final class CMPDL {
 
-    public static final Gson GSON_INSTANCE = new Gson();
-    public static final Pattern FILE_NAME_URL_PATTERN = Pattern.compile(".*?/([^/]*)$");
-    public static String userAgent = "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Ubuntu Chromium/53.0.2785.143 Chrome/53.0.2785.143 Safari/537.36";
+    private static final Gson GSON = new GsonBuilder().create();
+    private static final Pattern CURSE_FORGE_MOD_PACK_PATTERN = Pattern.compile("https://www\\.curseforge\\.com/minecraft/modpacks/(?<pack>[0-9a-z-]+)/(?:(?:files)|(?:download))/(?<version>\\d+)(?:/file)?/?");
+    private static final String META_URL = "https://addons-ecs.forgesvc.net/api/v2/addon/0/file/%s/download-url";
+    private static final String MOD_URL = "https://addons-ecs.forgesvc.net/api/v2/addon/%s/file/%s/download-url";
+    private static final String USER_AGENT = "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Ubuntu Chromium/53.0.2785.143 Chrome/53.0.2785.143 Safari/537.36";
 
     public static boolean downloading = false;
     public static List<String> missingMods = null;
 
+    private CMPDL() {
+    }
+
     public static void main(String[] args) {
         if (args.length > 0) {
+            if (args.length != 1) {
+                System.out.println("USAGE:");
+                System.out.println("cmpdl | open interface");
+                System.out.println("cmpdl <url> | download the specified pack version");
+                System.exit(1);
+            }
+
             String url = args[0];
-            String version = "latest";
-            if (args.length > 1)
-                version = args[1];
             try {
-                downloadFromURL(url, version);
+                downloadFromURL(url);
             } catch (Exception e) {
                 throw new RuntimeException(e);
             }
@@ -46,28 +58,8 @@ public final class CMPDL {
         }
     }
 
-    public static void downloadFromURL(String url, String version) throws Exception {
+    public static void downloadFromURL(String url) throws Exception {
         if (downloading) {
-            return;
-        }
-
-        if (url.contains("feed-the-beast.com") && (version == null || version.isEmpty() || version.equals("latest"))) {
-            log("WARNING: For modpacks hosted in the FTB site, you need to provide a version, \"latest\" will not work!");
-            log("To find the version number to insert in the Curse File ID field, click the latest file on the sidebar on the right of the modpack's page.");
-            log("The number you need to input is the number at the end of the URL.");
-            log("For example, if you wanted to download https://www.feed-the-beast.com/projects/ftb-presents-skyfactory-3/files/2390075");
-            log("Then you would use 2390075 as the Curse File ID. Do not change the Modpack URL. Change that and click Download again to continue.");
-            Interface.setStatus("Awaiting Further Input");
-            return;
-        }
-
-        if (url.contains("curseforge.com") && (version == null || version.isEmpty() || version.equals("latest"))) {
-            log("WARNING: packversion \"latest\" is currently unsupported as curseforge have changed their url format.");
-            log("To find the version number to insert in the Curse File ID field, check the url of the file on the modpack's \"files\" page.");
-            log("The number you need to input is the number at the end of the URL.");
-            log("For example, if you wanted to download https://www.curseforge.com/minecraft/modpacks/crucial/files/2732998");
-            log("Then you would use 2732998 as the Curse File ID. Do not change the Modpack URL. Change that and click Download again to continue.");
-            Interface.setStatus("Awaiting Further Input");
             return;
         }
 
@@ -75,60 +67,54 @@ public final class CMPDL {
         downloading = true;
         log("~ Starting magical modpack download sequence ~");
         log("Input URL: " + url);
-        log("Input Version: " + version);
         Interface.setStatus("Starting up");
 
-        String packUrl = url;
-        if (packUrl.endsWith("/")) {
-            packUrl = packUrl.replaceAll(".$", "");
+        Matcher matcher = CURSE_FORGE_MOD_PACK_PATTERN.matcher(url);
+        if (!matcher.matches()) {
+            Interface.error();
+            log("");
+            log("Given URL was not a valid CurseForge Modpack File URL.");
+            return;
         }
 
-        String packVersion = version;
+        String pack = matcher.group("pack");
+        String version = matcher.group("version");
 
-        String fileUrl;
-        fileUrl = packUrl + "/download/" + packVersion + "/file";
-
-        String finalUrl = getLocationHeader(fileUrl);
-        log("File URL: " + fileUrl);
-        log("Final URL: " + finalUrl);
+        log("Modpack Name: " + pack);
+        log("Version: " + version);
         log("");
 
-        Matcher matcher = FILE_NAME_URL_PATTERN.matcher(finalUrl);
-        if (matcher.matches()) {
-            String filename = matcher.group(1);
-            log("Modpack filename is " + filename);
+        Path tmpDir = setupTempDir();
 
-            Path unzippedDir = downloadModpackMetadata(filename, finalUrl);
-            Manifest manifest = getManifest(unzippedDir);
-            Path outputDir = getOutputDir(filename);
+        Path extractedDir = downloadModpackMetadata(pack, version, tmpDir);
 
-            Path minecraftDir = outputDir.resolve("minecraft");
-            if (!Files.exists(minecraftDir)) {
-                Files.createDirectories(minecraftDir);
-            }
-
-            downloadModpackFromManifest(minecraftDir, manifest);
-            copyOverrides(manifest, unzippedDir, minecraftDir);
-            setupMultimcInfo(manifest, outputDir);
-
-            Interface.finishDownload(false);
-
-            endSetup(outputDir, manifest);
-        } else {
-            Interface.error();
-        }
+        doSetup(extractedDir, extractedDir.getFileName().toString());
     }
 
     public static void setupFromLocalFile(Path file) throws Exception {
+        if (downloading) {
+            return;
+        }
+
         missingMods = new ArrayList<>();
         downloading = true;
 
-        String filename = file.getFileName().toString();
-        log("Modpack filename is " + filename);
+        String fileName = file.getFileName().toString();
+        log("Modpack zip file is " + fileName);
+        log("");
 
-        Path unzippedDir = setupLocalModpackMetadata(file);
-        Manifest manifest = getManifest(unzippedDir);
-        Path outputDir = getOutputDir(filename);
+        Path tmpDir = setupTempDir();
+
+        Path extractedDir = setupLocalModpackMetadata(file, tmpDir);
+
+        doSetup(extractedDir, fileName);
+    }
+
+    private static void doSetup(Path extractedDir, String fileName) throws Exception {
+        Manifest manifest = getManifest(extractedDir);
+
+        Path outputDir = getOutputDir(fileName);
+        log("Output Dir " + outputDir);
 
         Path minecraftDir = outputDir.resolve("minecraft");
         if (!Files.exists(minecraftDir)) {
@@ -136,8 +122,10 @@ public final class CMPDL {
         }
 
         downloadModpackFromManifest(minecraftDir, manifest);
-        copyOverrides(manifest, unzippedDir, minecraftDir);
+        copyOverrides(manifest, extractedDir, minecraftDir);
         setupMultimcInfo(manifest, outputDir);
+
+        Interface.finishDownload(false);
 
         endSetup(outputDir, manifest);
     }
@@ -161,8 +149,8 @@ public final class CMPDL {
                 log(" - " + mod);
             }
             log("");
-            log("If these mods are crucial to the modpack functioning, try downloading the server version of the pack "
-                    + "and pulling them from there.");
+            log("If these mods are crucial to the modpack functioning, try downloading the server version of the "
+                    + "pack and pulling them from there.");
         }
         missingMods = null;
 
@@ -173,49 +161,59 @@ public final class CMPDL {
         Desktop.getDesktop().open(outputDir.toFile());
     }
 
-    public static Path downloadModpackMetadata(String filename, String url) throws IOException {
+    public static Path downloadModpackMetadata(String pack, String version, Path tmpDir) throws IOException {
+        log("Setting up Metadata");
         Interface.setStatus("Setting up Metadata");
 
-        String zipName = filename;
-        if (!zipName.endsWith(".zip")) {
-            zipName = zipName + ".zip";
-        }
+        String url = resolveModpackUrl(pack, version);
 
-        Path retDir = setupTemporaryDirectory(filename);
+        String zipName = URLDecoder.decode(url.substring(url.lastIndexOf('/') + 1), StandardCharsets.UTF_8);
+        String extractedName = zipName.replaceAll("\\.zip", "");
+        Path zipFile = tmpDir.resolve(zipName);
+        Path extractedDir = tmpDir.resolve(extractedName);
 
-        log("Downloading zip file " + zipName);
-        Interface.setStatus("Downloading Modpack .zip");
-        Path f = retDir.resolve(zipName);
-        downloadFileFromURL(f, new URL(url));
+        log("Downloading Modpack zip file to " + zipFile);
+        Interface.setStatus("Downloading Modpack zip file");
 
-        extractModpackMetadata(f, retDir);
+        downloadFileFromURL(zipFile, new URL(url));
 
-        return retDir;
+        log("Extracting Modpack zip file to " + extractedDir);
+        Interface.setStatus("Extracting Modpack zip file");
+
+        extractModpackMetadata(zipFile, extractedDir);
+
+        return extractedDir;
     }
 
-    public static Path setupLocalModpackMetadata(Path file) throws IOException {
+    public static Path setupLocalModpackMetadata(Path zipFile, Path tmpDir) throws IOException {
+        log("Setting up Metadata");
         Interface.setStatus("Setting up Metadata");
 
-        Path retDir = setupTemporaryDirectory(file.getFileName().toString());
+        String zipName = zipFile.getFileName().toString();
+        String extractedName = zipName.replaceAll("\\.zip", "");
+        Path extractedDir = tmpDir.resolve(extractedName);
 
-        extractModpackMetadata(file, retDir);
+        log("Extracting Modpack zip file " + zipName);
+        Interface.setStatus("Extracting Modpack zip file");
 
-        return retDir;
+        extractModpackMetadata(zipFile, extractedDir);
+
+        return extractedDir;
     }
 
-    public static Path setupTemporaryDirectory(String filename) throws IOException {
-        Path tempDir = Files.createTempDirectory("cmdpl");
-        log("CMPDL Temp Dir is " + tempDir);
-        tempDir.toFile().deleteOnExit();
-
-        return tempDir;
+    public static Path setupTempDir() throws IOException {
+        Path userHome = Path.of(System.getProperty("user.home"));
+        Path tmpDir = userHome.resolve(".cmpdl").toAbsolutePath().normalize();
+        Files.createDirectories(tmpDir);
+        log("CMPDL Temp Dir is " + tmpDir);
+        return tmpDir;
     }
 
-    public static void extractModpackMetadata(Path f, Path retDir) throws IOException {
+    public static void extractModpackMetadata(Path zipFile, Path extractDir) throws IOException {
         Interface.setStatus("Unzipping Modpack Download");
         log("Unzipping file");
 
-        try (FileSystem zipFs = FileSystems.newFileSystem(f, null)) {
+        try (FileSystem zipFs = FileSystems.newFileSystem(zipFile, Map.of(), null)) {
             List<Path> roots = new ArrayList<>();
             zipFs.getRootDirectories().forEach(roots::add);
 
@@ -226,17 +224,16 @@ public final class CMPDL {
             Path root = roots.get(0);
             ExecutorService es = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors());
 
-            Files.walk(root).filter(Files::isRegularFile).forEach(p -> {
-                es.submit(() -> {
-                    Path extracted = retDir.resolve(root.relativize(p).toString());
-                    try {
-                        Files.createDirectories(extracted.getParent());
-                        Files.copy(p, extracted, StandardCopyOption.REPLACE_EXISTING);
-                    } catch (IOException e) {
-                        throw new UncheckedIOException(e);
-                    }
-                });
-            });
+            Files.walk(root).filter(Files::isRegularFile).forEach(p -> es.submit(() -> {
+                Path extracted = extractDir.resolve(root.relativize(p).toString());
+                System.out.println(p + " -> " + extracted);
+                try {
+                    Files.createDirectories(extracted.getParent());
+                    Files.copy(p, extracted, StandardCopyOption.REPLACE_EXISTING);
+                } catch (IOException e) {
+                    throw new UncheckedIOException(e);
+                }
+            }));
 
             es.shutdown();
 
@@ -249,17 +246,15 @@ public final class CMPDL {
         log("Done unzipping");
     }
 
-    public static Manifest getManifest(Path dir) throws IOException {
+    public static Manifest getManifest(Path tmpDir) throws IOException {
         Interface.setStatus("Parsing Manifest");
-        Path f = dir.resolve("manifest.json");
-        if (!Files.exists(f)) {
+        Path manifestFile = tmpDir.resolve("manifest.json");
+        if (!Files.exists(manifestFile)) {
             throw new IllegalArgumentException("This modpack has no manifest");
         }
 
         log("Parsing Manifest");
-        Manifest manifest = GSON_INSTANCE.fromJson(Files.newBufferedReader(f), Manifest.class);
-
-        return manifest;
+        return GSON.fromJson(Files.newBufferedReader(manifestFile), Manifest.class);
     }
 
     public static Path downloadModpackFromManifest(Path outputDir, Manifest manifest) throws IOException, URISyntaxException {
@@ -285,18 +280,19 @@ public final class CMPDL {
         return outputDir;
     }
 
-    public static void copyOverrides(Manifest manifest, Path tempDir, Path outDir) throws IOException {
+    public static void copyOverrides(Manifest manifest, Path extractedDir, Path outDir) throws IOException {
         Interface.setStatus("Copying modpack overrides");
         log("Copying modpack overrides");
-        Path overridesDir = tempDir.resolve(manifest.overrides);
+        Path overridesDir = extractedDir.resolve(manifest.overrides);
 
-        Files.walk(overridesDir).forEach(path -> {
+        Files.walk(overridesDir).filter(Files::isRegularFile).forEach(p -> {
+            log("Override: " + p.getFileName());
+            Path copied = outDir.resolve(overridesDir.relativize(p));
             try {
-                log("Override: " + path.getFileName());
-                Files.copy(path, Paths.get(path.toString().replace(overridesDir.toString(), outDir.toString())));
+                Files.createDirectories(copied.getParent());
+                Files.copy(p, copied, StandardCopyOption.REPLACE_EXISTING);
             } catch (IOException e) {
-                if (!(e instanceof FileAlreadyExistsException))
-                    log("Error copying " + path.getFileName() + ": " + e.getMessage() + ", " + e.getClass());
+                throw new UncheckedIOException(e);
             }
         });
         log("Done copying overrides");
@@ -329,11 +325,11 @@ public final class CMPDL {
         }
     }
 
-    public static Path getOutputDir(String filename) throws IOException, URISyntaxException {
+    public static Path getOutputDir(String fileName) throws IOException, URISyntaxException {
         Path jarFile = Path.of(CMPDL.class.getProtectionDomain().getCodeSource().getLocation().toURI());
         Path homePath = jarFile.getParent();
 
-        String outname = URLDecoder.decode(filename, StandardCharsets.UTF_8);
+        String outname = URLDecoder.decode(fileName, StandardCharsets.UTF_8);
         outname = outname.replaceAll("\\.zip", "");
         Path outDir = homePath.resolve(outname);
 
@@ -344,100 +340,84 @@ public final class CMPDL {
             Files.createDirectories(outDir);
         }
 
-        return outDir;
+        return outDir.toAbsolutePath().normalize();
     }
 
-    public static void downloadFile(Manifest.FileData file, Path modsDir, int remaining, int total) throws IOException, URISyntaxException {
-        log("Downloading " + file);
-        Interface.setStatus("File: " + file + " (" + (total - remaining) + "/" + total + ")");
+    public static void downloadFile(Manifest.FileData fileData, Path modsDir, int remaining, int total) throws IOException, URISyntaxException {
+        log("Downloading file data " + fileData);
+        Interface.setStatus("File: " + fileData + " (" + (total - remaining) + "/" + total + ")");
         Interface.setStatus2("Acquiring Info");
 
-        String baseUrl = "http://minecraft.curseforge.com/projects/" + file.projectID;
-        log("Project URL is " + baseUrl);
+        String url = resolveModUrl(fileData.projectID, fileData.fileID);
+        log("File download URL is " + url);
 
-        String projectUrl = getLocationHeader(baseUrl);
-        projectUrl = projectUrl.replaceAll("\\?cookieTest=1", "");
-        String fileDlUrl = projectUrl + "/download/" + file.fileID + "/file";
-        log("File download URL is " + fileDlUrl);
+        String fileName = URLDecoder.decode(url.substring(url.lastIndexOf('/') + 1), StandardCharsets.UTF_8);
 
-        String finalUrl = getLocationHeader(fileDlUrl);
-        Matcher m = FILE_NAME_URL_PATTERN.matcher(finalUrl);
-        if (!m.matches()) {
-            throw new IllegalArgumentException("Mod file doesn't match filename pattern");
-        }
+        Interface.setStatus2("Downloading " + fileName);
 
-        String filename = m.group(1);
-        filename = URLDecoder.decode(filename, StandardCharsets.UTF_8);
-
-        Interface.setStatus2("Downloading");
-
-        if (filename.endsWith("cookieTest=1")) {
-            log("Missing file! Skipping it");
-            missingMods.add(finalUrl);
-        } else {
-            log("Downloading " + filename);
-
-            Path f = modsDir.resolve(filename);
-            try {
-                if (filename.equals("download"))
-                    throw new FileNotFoundException("Invalid filename");
-
-                if (Files.exists(f)) {
-                    log("This file already exists. No need to download it");
-                } else {
-                    downloadFileFromURL(f, new URL(finalUrl));
-                }
-                log("Downloaded! " + remaining + "/" + total + " remaining");
-            } catch (IOException e) {
-                Interface.addLogLine("Error: " + e.getClass().toString() + ": " + e.getLocalizedMessage());
-                Interface.addLogLine("This mod will not be downloaded. If you need the file, you'll have to get it manually:");
-                Interface.addLogLine(finalUrl);
-                CMPDL.missingMods.add(finalUrl);
+        Path file = modsDir.resolve(fileName);
+        try {
+            if (Files.exists(file)) {
+                log("This file already exists. No need to download it");
+            } else {
+                downloadFileFromURL(file, new URL(url));
             }
+            log("Downloaded! " + remaining + "/" + total + " remaining");
+        } catch (IOException e) {
+            Interface.addLogLine("Error: " + e.getClass().toString() + ": " + e.getLocalizedMessage());
+            Interface.addLogLine("This mod will not be downloaded. If you need the file, you'll have to get it manually:");
+            Interface.addLogLine(url);
+            missingMods.add(fileData.toString());
         }
 
         log("");
     }
 
-    public static String getLocationHeader(String location) throws IOException, URISyntaxException {
-        URI uri = new URI(location);
-        HttpURLConnection connection;
-
-        for (; ; ) {
-            URL url = uri.toURL();
-            connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestProperty("User-Agent", userAgent);
-            connection.setInstanceFollowRedirects(false);
-            String redirectLocation = connection.getHeaderField("Location");
-            if (redirectLocation == null) {
-                break;
-            }
-
-            if (redirectLocation.startsWith("/")) {
-                uri = new URI(uri.getScheme(), uri.getHost(), redirectLocation, uri.getFragment());
-            } else {
-                try {
-                    uri = new URI(redirectLocation);
-                } catch (URISyntaxException e) {
-                    url = new URL(redirectLocation);
-                    uri = new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(), url.getPath(), url.getQuery(), url.getRef());
-                }
-            }
+    private static String resolveModpackUrl(String pack, String version) throws IOException {
+        URL url = new URL(String.format(META_URL, version));
+        List<String> lines = readLinesFromURL(url);
+        if (lines.size() != 1) {
+            throw new RuntimeException();
         }
+        return lines.get(0);
+    }
 
-        return uri.toString();
+    private static String resolveModUrl(int project, int version) throws IOException {
+        URL url = new URL(String.format(MOD_URL, project, version));
+        List<String> lines = readLinesFromURL(url);
+        if (lines.size() != 1) {
+            throw new RuntimeException();
+        }
+        return lines.get(0);
     }
 
     public static ReadableByteChannel open(URL url) throws IOException {
         URLConnection conn = url.openConnection();
-        conn.setRequestProperty("User-Agent", userAgent);
+        conn.setRequestProperty("User-Agent", USER_AGENT);
         return Channels.newChannel(conn.getInputStream());
+    }
+
+    public static List<String> readLinesFromURL(URL url) throws IOException {
+        URLConnection conn = url.openConnection();
+        conn.setRequestProperty("User-Agent", USER_AGENT);
+
+        List<String> lines = new ArrayList<>();
+        String line;
+        try (
+                BufferedReader br = new BufferedReader(new InputStreamReader(conn.getInputStream()))
+        ) {
+            while ((line = br.readLine()) != null) {
+                lines.add(line);
+            }
+        }
+
+        return lines;
     }
 
     public static void downloadFileFromURL(Path f, URL url) throws IOException {
         try (
                 ReadableByteChannel in = open(url);
-                FileChannel out = FileChannel.open(f, StandardOpenOption.WRITE, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+                FileChannel out = FileChannel.open(f, StandardOpenOption.WRITE, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING)
         ) {
             out.transferFrom(in, 0, Long.MAX_VALUE);
         }
@@ -446,8 +426,5 @@ public final class CMPDL {
     public static void log(String s) {
         Interface.addLogLine(s);
         System.out.println(s);
-    }
-
-    private CMPDL() {
     }
 }
